# chromadb-rs

./: .gitignore  .releaserc  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: cargo-test.yml  release.yml  test.yaml
src/: api.rs  client.rs  collection.rs  commons.rs  lib.rs
src/async/: api.rs  client.rs  collection.rs
src/async/embeddings/: bert.rs
src/embeddings/: bert.rs  mod.rs  openai.rs
src/v1/: api.rs  client.rs  collection.rs  commons.rs  error.rs  mod.rs
src/v1/embeddings/: bert.rs  mod.rs  openai.rs
src/v2/: api.rs  client.rs  collection.rs
src/v2/embeddings/: bert.rs  mod.rs  openai.rs
