[package]
name = "chromadb"
authors = ["Anush008"]
description = "A Rust client for  ChromaDB. https://docs.rs/chromadb/latest/chromadb/"
edition = "2021"
license = "MIT"
version = "0.1.7"
repository = "https://github.com/Anush008/chromadb-rs/"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.reqwest]
features = ["json"]
default-features = false
version = "0.11"

[dependencies.anyhow]
version = "1"

[dependencies.async-trait]
version = "0.1"

[dependencies.serde_json]
version = "1"

# For testing
[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["macros"]
