[package]
name = "chromadb"
authors = ["Anush008"]
description = "A Rust client library for the ChromaDB vector database."
edition = "2021"
license = "MIT"
version = "0.4.4"
repository = "https://github.com/Anush008/chromadb-rs/"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.minreq]
version = "2"
default-features = false
features = ["https-rustls", "json-using-serde"]

[dependencies.anyhow]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.rust-bert]
version = "0.21"
features = ["download-libtorch"]
optional = true

[features]
bert = ["dep:rust-bert"]
openai = []
