[package]
name = "chromadb"
authors = ["Anush008", "danwritecode"]
description = "A Rust client library for the ChromaDB vector database."
edition = "2021"
license = "MIT"
version = "0.5.0"
repository = "https://github.com/Anush008/chromadb-rs/"

[dependencies.base64]
version = "0.22"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.minreq]
version = "2"
default-features = false
features = ["https-rustls", "json-using-serde"]

[dependencies.anyhow]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies]
async-trait = "0.1.83"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

[features]
openai = []
